--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <p>It was a dark and stormy night... Their was poop everywhere.</p>
+    <p>It was a dark and stormy night... Their was poop everywhere. But it was dark.</p>
   </body>
 </html>
