--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
   <body>
     <p>It was a dark and stormy night... Their was poop everywhere. But it was dark.</p>
   </body>
