--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
   <body>
     <p>It was a dark and stormy night... Their was poop everywhere. But it was dark.</p>
   </body>
